Added logging to LCDDisplay

--- a/logging.conf
+++ b/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,PiSmoker,PID,Traeger,MAX31865
+keys=root,PiSmoker,PID,Traeger,MAX31865,LCDDisplay
 
 [handlers]
 keys=consoleHandler
@@ -34,6 +34,13 @@ level=INFO
 handlers=consoleHandler
 qualname=MAX31865
 propagate=0
+
+[logger_LCDDisplay]
+level=INFO
+handlers=consoleHandler
+qualname=LCDDisplay
+propagate=0
+
 
 
 [handler_consoleHandler]
