--- a/logging.conf
+++ b/logging.conf
@@ -30,7 +30,7 @@ qualname=Traeger
 propagate=0
 
 [logger_MAX31865]
-level=INFO
+level=DEBUG
 handlers=consoleHandler
 qualname=MAX31865
 propagate=0
